--- a/src/components/css/Meeting.css
+++ b/src/components/css/Meeting.css
@@ -1,4 +1,4 @@
-.frwdicon{
+.frwdicon,.bckwdicon {
     margin-left: 10px;
     font-size: 20px;
     color: #ffa500;
@@ -9,9 +9,4 @@
 .playicon, .pauseicon{
     font-size: 20px;
     color: #ffa500;
-}
-.video-controls{
-    
-    padding: 10px;
-    
 }
