--- a/src/components/css/Meeting.css
+++ b/src/components/css/Meeting.css
@@ -1,12 +1,59 @@
-.frwdicon,.bckwdicon {
+.frwdicon,.bckwdicon ,.speakericon, .playicon, .pauseicon, .commenticon, .cropicon , .hidevideoicon  {
     margin-left: 10px;
-    font-size: 20px;
-    color: #ffa500;
-   
-    
+    font-size: 40px;
     
 }
-.playicon, .pauseicon{
-    font-size: 20px;
-    color: #ffa500;
+.icon{
+    background-color: #0f6077;
+    color: #f5f5f5;
+    padding: 10px;
+    border-radius:50%;
+    cursor: pointer;
 }
+
+.button-container {
+    display: flex;
+    justify-content: center;
+  }
+  
+  button {
+    background-color: #0f6077;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: background-color 0.3s;
+  }
+  
+  button:hover {
+    background-color: #60bdd9;
+  }
+  
+  button span {
+    margin-top: 5px;
+  }
+  .editor{
+    
+  }
+
+  .scrollbar-container {
+    height: 100vh;
+    overflow-y: auto;
+  }
+  .video-options-row {
+    height: 100vh;
+  }
+  
+  .video-col,
+  .options-col {
+    height: 100%;
+    overflow-y: auto;
+  }
+  
+  .meetnav{
+    padding: 20px;
+    border: 2px solid #000;
+  }
