--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -1,5 +1,5 @@
 .bgnav{
-  background-color: #ffa500;
+  background-color: #0f6077;
 }
 .hamburg{
   color: #f5f5f5;
@@ -7,10 +7,9 @@
 .navlinks{
   color: #f5f5f5;
 }
-.btn{
-  outline: #fff;
+.btn-search{
+  color: #f5f5f5;
+  font-size: 20px;
 }
-.btn:hover{
-  color: #fff;
-  
-}
+
+
