--- a/src/components/css/Snippets.css
+++ b/src/components/css/Snippets.css
@@ -1,7 +1,13 @@
 /* CSS for Snippets component */
 
 /* Container styling */
-.navbar {
+.container {
+    width: 70%;
+    margin: 0 auto;
+  }
+  
+  /* Navbar styling */
+  .navbar {
     background-color: #007bff;
     padding: 10px;
     display: flex;
@@ -20,33 +26,45 @@
   .nav-item {
     color: #fff;
     margin-left: auto;
+    font-weight: bold;
   }
   
   /* Editor styling */
-  .editor {
-    border: 2px solid #a8a8a8;
+  .react-quill {
+    border: 1px solid #a8a8a8;
     padding: 10px;
     margin-top: 10px;
     height: 400px;
     overflow-y: auto;
   }
   
-  /* Comments styles */
+  /* Add Comment button styling */
+  .comment-btn {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 12px 20px;
+    cursor: pointer;
+    margin-top: 20px;
+  }
+  
+  .comment-btn:hover {
+    background-color: #0056b3;
+  }
+  
+  /* Comments list styling */
   ul {
     list-style-type: none;
     padding: 0;
-    margin-top: 10px;
+    margin-top: 20px;
   }
   
   li {
     border: 1px solid #ddd;
     border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
+    padding: 15px;
+    margin-bottom: 20px;
   }
-  .commentbtn{
-    padding: 10px;
-    margin: 20px;
-    margin-left: 150px;
-  }
+  
+  /* Add more styles as needed */
   
