--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -1,5 +1,6 @@
 .bgnav{
-  background-color: #0f6077;
+  /* background-color: #0f6077; */
+  background-color: #007bff;
 }
 .hamburg{
   color: #f5f5f5;
